--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>asd</h1>
+    <a name="arriba"></a>
+<header>
+    <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
+    <div><a href="index.html">Home</a> </div>
+    <div><a href="">Generos</a> </div>
+    <Div><a href="playlist.html">Playlist</a></Div>
+</header>
+<div class="triple">
+    <div class="tracks" >
+        <div><a href="detail.html">Tracks</a> </div>
+    </div>
+    <Div class="albums">
+        <div><a href="detail.html">Albums</a> </div>
+    </Div>
+    <div class="artist">
+        <div><a href="detail.html">Artist</a></div>
+    </div>
+</div>
+<a class="arriba" href="#arriba">Go Top</a>
+
 </body>
 </html>
