--- a/html/detail.html
+++ b/html/detail.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/detail.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
+        <div><a href="index.html">Home</a> </div>
+        <div><a href="">Generos</a> </div>
+        <Div><a href="playlist.html">Playlist</a></Div>
+    </header>
 </body>
 </html>
