--- a/html/playlist.html
+++ b/html/playlist.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/playlist.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
+        <div><a href="index.html">Home</a> </div>
+        <div><a href="">Generos</a> </div>
+        <Div><a href="playlist.html">Playlist</a></Div>
+    </header>
+    <div class="Canciones"><h1>Canciones</h1>
+        <div class="cancion1" >Cancion 1</div>
+        <div class="cancion2" >Cancion 2</div>
+        <div class="cancion3">Cancion 3</div>
+    </div>
+ 
 </body>
 </html>
