--- a/html/detail.html
+++ b/html/detail.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
         <div><a href="index.html">Home</a> </div>
-        <div><a href="">Generos</a> </div>
+        <div><a href="generos.html">Generos</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
     </header>
 </body>
