--- a/html/generos.html
+++ b/html/generos.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/generos.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
+        <div><a href="index.html">Home</a> </div>
+        <div><a href="generos.html">Generos</a> </div>
+        <Div><a href="playlist.html">Playlist</a></Div>
+    </header>
 </body>
 </html>
