--- a/html/playlist.html
+++ b/html/playlist.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
+    <a name="arriba"></a>
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
         <div><a href="index.html">Home</a> </div>
@@ -19,6 +20,6 @@
         <div class="cancion2" >Cancion 2</div>
         <div class="cancion3">Cancion 3</div>
     </div>
- 
+    <a class="arriba" href="#arriba">Go Top</a>
 </body>
 </html>
