--- a/html/generos.html
+++ b/html/generos.html
@@ -9,11 +9,13 @@
 
 </head>
 <body>
+    <a name="arriba"></a>
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
         <div><a href="index.html">Home</a> </div>
         <div><a href="generos.html">Generos</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
     </header>
+    <a class="arriba" href="#arriba">Go Top</a>
 </body>
 </html>
