--- a/html/index.html
+++ b/html/index.html
@@ -17,13 +17,16 @@
 </header>
 <div class="triple">
     <div class="tracks" >
-        <div><a href="detail.html">Tracks</a> </div>
+        <div class="tracksarriba"><a href="detail.html">Tracks</a> </div>
+        <div class="abajo">ajjf</div>
     </div>
     <Div class="albums">
-        <div><a href="detail.html">Albums</a> </div>
+        <div class="arribaalbum"><a href="detail.html">Albums</a> </div>
+        <div class="abajo2">nfjvdn</div>
     </Div>
     <div class="artist">
-        <div><a href="detail.html">Artist</a></div>
+        <div class="ArtistArriba"><a href="detail.html">Artist</a></div>
+        <div class="abajo3">ncnrjks</div>
     </div>
 </div>
 <a class="arriba" href="#arriba">Go Top</a>
