--- a/html/generos.html
+++ b/html/generos.html
@@ -13,9 +13,13 @@
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
         <div><a href="index.html">Home</a> </div>
-        <div><a href="generos.html">Generos</a> </div>
+        <div><a href="generos.html">Genres</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
     </header>
     <a class="arriba" href="#arriba">Go Top</a>
+    <div class = "footer">
+        <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
+        <div class="deezer"><img src="../img/deezer.png" alt="deezer" width="50px"></div>
+    </div>
 </body>
 </html>
