--- a/html/index.html
+++ b/html/index.html
@@ -12,9 +12,14 @@
 <header>
     <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
     <div><a href="index.html">Home</a> </div>
-    <div><a href="generos.html">Generos</a> </div>
+    <div><a href="generos.html">Genres</a> </div>
     <Div><a href="playlist.html">Playlist</a></Div>
 </header>
+<div class="intermedio">
+    <div class="premio">¿Sabías que pasaste 30.000 minutos escuchando música en abril, y que tu artista favorito fue Paulo Londra? </div>
+    <div class="buscador">Acá va el buscador</div>
+</div>
+<div class="carrusel">Acá iría el carrusel</div>
 <div class="triple">
     <div class="tracks" >
         <div class="tracksarriba"><a href="detail.html">Tracks</a> </div>
@@ -30,6 +35,9 @@
     </div>
 </div>
 <a class="arriba" href="#arriba">Go Top</a>
-
+<div class = "footer">
+    <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
+    <div class="deezer"><img src="../img/deezer.png" alt="deezer" width="50px"></div>
+</div>
 </body>
 </html>
