--- a/html/playlist.html
+++ b/html/playlist.html
@@ -12,7 +12,7 @@
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
         <div><a href="index.html">Home</a> </div>
-        <div><a href="generos.html">Generos</a> </div>
+        <div><a href="generos.html">Genres</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
     </header>
     <div class="Canciones"><h1>Canciones</h1>
@@ -21,5 +21,9 @@
         <div class="cancion3">Cancion 3</div>
     </div>
     <a class="arriba" href="#arriba">Go Top</a>
+    <div class = "footer">
+        <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
+        <div class="deezer"><img src="../img/deezer.png" alt="deezer" width="50px"></div>
+    </div>
 </body>
 </html>
