--- a/html/index.html
+++ b/html/index.html
@@ -23,15 +23,59 @@
 <div class="triple">
     <div class="tracks" >
         <div class="tracksarriba"><a href="detail.html">Tracks</a> </div>
-        <div class="abajo">ajjf</div>
+        <div class="abajo">
+            <div class="trackblock">
+                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="">
+                <p>THE SCOTTS | Travis Scott ft. Kid Cudi </p>
+
+            </div>
+            <div class="trackblock" >
+                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="">
+                <p>THE SCOTTS | Travis Scott ft. Kid Cudi</p>
+            </div>
+            <div class="trackblock">
+                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="">
+                <p>THE SCOTTS | Travis Scott ft. Kid Cudi
+                </p>
+            </div>
+        </div>
     </div>
     <Div class="albums">
         <div class="arribaalbum"><a href="detail.html">Albums</a> </div>
-        <div class="abajo2">nfjvdn</div>
+        <div class="abajo2"> 
+            <div class="albumblock">
+                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="">
+                <p>The Getaway | Red Hot Chilli Peppers </p>
+
+            </div>
+            <div class="albumblock" >
+                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="">
+                <p>The Getaway | Red Hot Chilli Peppers </p>
+            </div>
+            <div class="albumblock">
+                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="">
+                <p>The Getaway | Red Hot Chilli Peppers </p>
+        </div>
+        </div>
+           
     </Div>
     <div class="artist">
         <div class="ArtistArriba"><a href="detail.html">Artist</a></div>
-        <div class="abajo3">ncnrjks</div>
+        <div class="abajo3">
+            <div class="artistblock">
+                <img src="../img/spinetta.jpg" height="100px" alt="">
+                <p>Luis Alberto Spinetta </p>
+
+            </div>
+            <div class="artistblock" >
+                <img src="../img/spinetta.jpg" height="100px" alt="">
+                <p>Luis Alberto Spinetta </p>
+            </div>
+            <div class="artistblock">
+                <img src="../img/spinetta.jpg" height="100px" alt="">
+                <p>Luis Alberto Spinetta </p>
+        </div>
+        </div>
     </div>
 </div>
 <a class="arriba" href="#arriba">Go Top</a>
