--- a/html/generos.html
+++ b/html/generos.html
@@ -16,6 +16,22 @@
         <div><a href="generos.html">Genres</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
     </header>
+    <div class="todo">
+         <div class="fila1">
+            <div><img src="../img/rock.jpg" alt="" height="140vh"></div>
+            <img src="../img/pop.jpg" alt="" height="140vh">
+            <img src="../img/rock.jpg" alt="" height="140vh">
+            <img src="../img/pop.jpg" alt="" height="140vh">
+            <img src="../img/rock.jpg" alt="" height="140vh">
+            <img src="../img/pop.jpg" alt="" height="140vh"></div>
+        <div class="fila1">
+                <img src="../img/rock.jpg" alt="" height="140vh">
+                <img src="../img/pop.jpg" alt="" height="140vh">
+                <img src="../img/rock.jpg" alt="" height="140vh">
+                <img src="../img/pop.jpg" alt="" height="140vh">
+                <img src="../img/rock.jpg" alt="" height="140vh">
+                <img src="../img/pop.jpg" alt="" height="140vh"></div>
+    </div>
     <a class="arriba" href="#arriba">Go Top</a>
     <div class = "footer">
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
