--- a/html/index.html
+++ b/html/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Slakun</title>
     <link rel="stylesheet" href="../css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     <a name="arriba"></a>
 <header>
-    <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
+    <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt=""></a></div>
     <div><a href="index.html">Home</a> </div>
     <div><a href="generos.html">Genres</a> </div>
     <Div><a href="playlist.html">Playlist</a></Div>
@@ -62,19 +62,21 @@
     <div class="artist">
         <div class="ArtistArriba"><a href="detail.html">Artist</a></div>
         <div class="abajo3">
+           <a href="detail.html"> 
+               <div class="artistblock">
+            <img src="../img/spinetta.jpg" height="100px" alt="">
+            <p>Luis Alberto Spinetta </p>
+        </div></a>
+        <a href="detail.html"> 
             <div class="artistblock">
-                <img src="../img/spinetta.jpg" height="100px" alt="">
-                <p>Luis Alberto Spinetta </p>
-
-            </div>
-            <div class="artistblock" >
-                <img src="../img/spinetta.jpg" height="100px" alt="">
-                <p>Luis Alberto Spinetta </p>
-            </div>
-            <div class="artistblock">
-                <img src="../img/spinetta.jpg" height="100px" alt="">
-                <p>Luis Alberto Spinetta </p>
-        </div>
+         <img src="../img/spinetta.jpg" height="100px" alt="">
+         <p>Luis Alberto Spinetta </p>
+     </div></a>
+     <a href="detail.html"> 
+        <div class="artistblock">
+     <img src="../img/spinetta.jpg" height="100px" alt="">
+     <p>Luis Alberto Spinetta </p>
+ </div></a>
         </div>
     </div>
 </div>
