--- a/html/detail.html
+++ b/html/detail.html
@@ -3,18 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Slakun</title>
     <link rel="stylesheet" href="../css/detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     <a name="arriba"></a>
     <header>
-        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
+        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt=""></a></div>
         <div><a href="index.html">Home</a> </div>
         <div><a href="generos.html">Genres</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
     </header>
+    
+    <div class="contenido">
+    <img class="fotospinetta" src="../img/spinettadetail.jpg" alt="" height="600px">
+    <div class="texto">
+        <h1>Luis Alberto Spinetta</h1>
+         <h2>Luis Alberto Spinetta (Buenos Aires; 23 de enero de 1950 - Ib.; 8 de febrero de 2012) fue un multifacético artista argentino, cantante, intelectual, guitarrista, poeta, escritor, dibujante, productor discográfico, compositor, considerado uno de los más importantes y respetados músicos en Latinoamérica.</h2>
+         <h2>A lo largo de su carrera a ganado varios premios, entre los que se destacan los siguientes:
+             <ul>
+                 <li>Premio Konex de Honor 2015: Música Popular</li>
+                 <li>Premio Konex de Platino 2005: Solista Masculino de Rock</li>
+                 <li>Premio Konex de Platino 1995: Cantante Masculino de Rock</li>
+                 <li>
+                    Premio Konex de Platino 1985: Autor / Compositor de Rock</li>
+             </ul>
+         </h2>
+         <h2>Albumes:</h2>
+        <div class="albumes">
+         <img src="../img/album1spinetta.jpg" alt="" height="140vh">
+         <img src="../img/album2spinetta.jpg" alt="" height="140vh">
+         <img src="../img/album3spinetta.jpg" alt="" height="140vh">
+         <img src="../img/album4spinetta.jpg" alt="" height="140vh">
+         <img src="../img/album5spinetta.jpg" alt="" height="140vh">
+        </div> 
+    </div>
+
+   </div>
     <a class="arriba" href="#arriba">Go Top</a>
     <div class = "footer">
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
