--- a/html/generos.html
+++ b/html/generos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Slakun</title>
     <link rel="stylesheet" href="../css/generos.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
@@ -11,20 +11,21 @@
 <body>
     <a name="arriba"></a>
     <header>
-        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
+        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt=""></a></div>
         <div><a href="index.html">Home</a> </div>
         <div><a href="generos.html">Genres</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
     </header>
+    <h1>GENEROS</h1>
     <div class="todo">
-         <div class="fila1">
-            <div><img src="../img/rock.jpg" alt="" height="140vh"></div>
+         <div class="fila">
+            <img src="../img/rock.jpg" alt="" height="140vh">
             <img src="../img/pop.jpg" alt="" height="140vh">
             <img src="../img/rock.jpg" alt="" height="140vh">
             <img src="../img/pop.jpg" alt="" height="140vh">
             <img src="../img/rock.jpg" alt="" height="140vh">
             <img src="../img/pop.jpg" alt="" height="140vh"></div>
-        <div class="fila1">
+        <div class="fila">
                 <img src="../img/rock.jpg" alt="" height="140vh">
                 <img src="../img/pop.jpg" alt="" height="140vh">
                 <img src="../img/rock.jpg" alt="" height="140vh">
