--- a/html/playlist.html
+++ b/html/playlist.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Slakun</title>
     <link rel="stylesheet" href="../css/playlist.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     <a name="arriba"></a>
     <header>
-        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="30px"alt=""></a></div>
+        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt=""></a></div>
         <div><a href="index.html">Home</a> </div>
         <div><a href="generos.html">Genres</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
