--- a/html/detail.html
+++ b/html/detail.html
@@ -21,7 +21,7 @@
     <div class="texto">
         <h1>Luis Alberto Spinetta</h1>
          <h2>Luis Alberto Spinetta (Buenos Aires; 23 de enero de 1950 - Ib.; 8 de febrero de 2012) fue un multifacético artista argentino, cantante, intelectual, guitarrista, poeta, escritor, dibujante, productor discográfico, compositor, considerado uno de los más importantes y respetados músicos en Latinoamérica.</h2>
-         <h2>A lo largo de su carrera a ganado varios premios, entre los que se destacan los siguientes:
+         <h2>A lo largo de su carrera ha ganado varios premios, entre los que se destacan los siguientes:
              <ul>
                  <li>Premio Konex de Honor 2015: Música Popular</li>
                  <li>Premio Konex de Platino 2005: Solista Masculino de Rock</li>
