--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
 <div class="carrusel">Acá iría el carrusel</div>
 <div class="triple">
     <div class="tracks" >
-        <div class="tracksarriba"><a href="detail.html">Tracks</a> </div>
+        <div class="tracksarriba">Tracks</a> </div>
         <div class="abajo">
             <div class="trackblock">
                 <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="">
@@ -41,7 +41,7 @@
         </div>
     </div>
     <Div class="albums">
-        <div class="arribaalbum"><a href="detail.html">Albums</a> </div>
+        <div class="arribaalbum">Albums</a> </div>
         <div class="abajo2"> 
             <div class="albumblock">
                 <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="">
@@ -60,7 +60,7 @@
            
     </Div>
     <div class="artist">
-        <div class="ArtistArriba"><a href="detail.html">Artist</a></div>
+        <div class="ArtistArriba">Artist</div>
         <div class="abajo3">
            <a href="detail.html"> 
                <div class="artistblock">
