--- a/html/detail.html
+++ b/html/detail.html
@@ -10,14 +10,14 @@
 <body>
     <a name="arriba"></a>
     <header>
-        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt=""></a></div>
+        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt="logo"></a></div>
         <div><a href="index.html">Home</a> </div>
         <div><a href="generos.html">Genres</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
     </header>
     
     <div class="contenido">
-    <img class="fotospinetta" src="../img/spinettadetail.jpg" alt="" height="600px">
+    <img class="fotospinetta" src="../img/spinettadetail.jpg" alt="spinetta" height="600px">
     <div class="texto">
         <h1>Luis Alberto Spinetta</h1>
          <h2>Luis Alberto Spinetta (Buenos Aires; 23 de enero de 1950 - Ib.; 8 de febrero de 2012) fue un multifacético artista argentino, cantante, intelectual, guitarrista, poeta, escritor, dibujante, productor discográfico, compositor, considerado uno de los más importantes y respetados músicos en Latinoamérica.</h2>
@@ -32,11 +32,11 @@
          </h2>
          <h2>Albumes:</h2>
         <div class="albumes">
-         <img src="../img/album1spinetta.jpg" alt="" height="140vh">
-         <img src="../img/album2spinetta.jpg" alt="" height="140vh">
-         <img src="../img/album3spinetta.jpg" alt="" height="140vh">
-         <img src="../img/album4spinetta.jpg" alt="" height="140vh">
-         <img src="../img/album5spinetta.jpg" alt="" height="140vh">
+         <img src="../img/album1spinetta.jpg" alt="album" height="140vh">
+         <img src="../img/album2spinetta.jpg" alt="album" height="140vh">
+         <img src="../img/album3spinetta.jpg" alt="album" height="140vh">
+         <img src="../img/album4spinetta.jpg" alt="album" height="140vh">
+         <img src="../img/album5spinetta.jpg" alt="album" height="140vh">
         </div> 
     </div>
 
