--- a/html/generos.html
+++ b/html/generos.html
@@ -11,7 +11,7 @@
 <body>
     <a name="arriba"></a>
     <header>
-        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt=""></a></div>
+        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt="logo"></a></div>
         <div><a href="index.html">Home</a> </div>
         <div><a href="generos.html">Genres</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
@@ -19,19 +19,19 @@
     <h1>GENEROS</h1>
     <div class="todo">
          <div class="fila">
-            <img src="../img/rock.jpg" alt="" height="140vh">
-            <img src="../img/pop.jpg" alt="" height="140vh">
-            <img src="../img/rock.jpg" alt="" height="140vh">
-            <img src="../img/pop.jpg" alt="" height="140vh">
-            <img src="../img/rock.jpg" alt="" height="140vh">
-            <img src="../img/pop.jpg" alt="" height="140vh"></div>
+            <img src="../img/rock.jpg" alt="rock" height="140vh">
+            <img src="../img/pop.jpg" alt="pop" height="140vh">
+            <img src="../img/rock.jpg" alt="rock" height="140vh">
+            <img src="../img/pop.jpg" alt="pop" height="140vh">
+            <img src="../img/rock.jpg" alt="rock" height="140vh">
+            <img src="../img/pop.jpg" alt="pop" height="140vh"></div>
         <div class="fila">
-                <img src="../img/rock.jpg" alt="" height="140vh">
-                <img src="../img/pop.jpg" alt="" height="140vh">
-                <img src="../img/rock.jpg" alt="" height="140vh">
-                <img src="../img/pop.jpg" alt="" height="140vh">
-                <img src="../img/rock.jpg" alt="" height="140vh">
-                <img src="../img/pop.jpg" alt="" height="140vh"></div>
+                <img src="../img/rock.jpg" alt="rock" height="140vh">
+                <img src="../img/pop.jpg" alt="pop" height="140vh">
+                <img src="../img/rock.jpg" alt="rock" height="140vh">
+                <img src="../img/pop.jpg" alt="pop" height="140vh">
+                <img src="../img/rock.jpg" alt="rock" height="140vh">
+                <img src="../img/pop.jpg" alt="pop" height="140vh"></div>
     </div>
     <a class="arriba" href="#arriba">Go Top</a>
     <div class = "footer">
