--- a/html/playlist.html
+++ b/html/playlist.html
@@ -10,7 +10,7 @@
 <body>
     <a name="arriba"></a>
     <header>
-        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt=""></a></div>
+        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt="logo"></a></div>
         <div><a href="index.html">Home</a> </div>
         <div><a href="generos.html">Genres</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
