--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 <body>
     <a name="arriba"></a>
 <header>
-    <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt=""></a></div>
+    <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt="logo"></a></div>
     <div><a href="index.html">Home</a> </div>
     <div><a href="generos.html">Genres</a> </div>
     <Div><a href="playlist.html">Playlist</a></Div>
@@ -25,16 +25,16 @@
         <div class="tracksarriba">Tracks</a> </div>
         <div class="abajo">
             <div class="trackblock">
-                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="">
+                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
                 <p>THE SCOTTS | Travis Scott ft. Kid Cudi </p>
 
             </div>
             <div class="trackblock" >
-                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="">
+                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
                 <p>THE SCOTTS | Travis Scott ft. Kid Cudi</p>
             </div>
             <div class="trackblock">
-                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="">
+                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
                 <p>THE SCOTTS | Travis Scott ft. Kid Cudi
                 </p>
             </div>
@@ -44,16 +44,16 @@
         <div class="arribaalbum">Albums</a> </div>
         <div class="abajo2"> 
             <div class="albumblock">
-                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="">
+                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
                 <p>The Getaway | Red Hot Chilli Peppers </p>
 
             </div>
             <div class="albumblock" >
-                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="">
+                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
                 <p>The Getaway | Red Hot Chilli Peppers </p>
             </div>
             <div class="albumblock">
-                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="">
+                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
                 <p>The Getaway | Red Hot Chilli Peppers </p>
         </div>
         </div>
@@ -64,17 +64,17 @@
         <div class="abajo3">
            <a href="detail.html"> 
                <div class="artistblock">
-            <img src="../img/spinetta.jpg" height="100px" alt="">
+            <img src="../img/spinetta.jpg" height="100px" alt="spinetta">
             <p>Luis Alberto Spinetta </p>
         </div></a>
         <a href="detail.html"> 
             <div class="artistblock">
-         <img src="../img/spinetta.jpg" height="100px" alt="">
+         <img src="../img/spinetta.jpg" height="100px" alt="spinetta">
          <p>Luis Alberto Spinetta </p>
      </div></a>
      <a href="detail.html"> 
         <div class="artistblock">
-     <img src="../img/spinetta.jpg" height="100px" alt="">
+     <img src="../img/spinetta.jpg" height="100px" alt="spinetta">
      <p>Luis Alberto Spinetta </p>
  </div></a>
         </div>
