--- a/html/index.html
+++ b/html/index.html
@@ -8,13 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a name="arriba"></a>
-<header>
-    <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt="logo"></a></div>
-    <div><a href="index.html">Home</a> </div>
-    <div><a href="generos.html">Genres</a> </div>
-    <Div><a href="playlist.html">Playlist</a></Div>
-</header>
+    <div class="total">
+    <a class="arriba" name="arriba"></a>
+    <header>
+        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt="logo"></a></div>
+        <div class="titulos"><a href="index.html">Home</a> </div>
+        <div class="titulos"><a href="generos.html">Genres</a> </div>
+        <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
+    </header>
 <div class="intermedio">
     <div class="premio">¿Sabías que pasaste 30.000 minutos escuchando música en abril, y que tu artista favorito fue Paulo Londra? </div>
     <div class="buscador">Acá va el buscador</div>
@@ -30,7 +31,7 @@
 
             </div>
             <div class="trackblock" >
-                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
+                <img class="fotomusica" src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
                 <p>THE SCOTTS | Travis Scott ft. Kid Cudi</p>
             </div>
             <div class="trackblock">
@@ -81,9 +82,10 @@
     </div>
 </div>
 <a class="arriba" href="#arriba">Go Top</a>
-<div class = "footer">
+<footer>
     <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
-    <div class="deezer"><img src="../img/deezer.png" alt="deezer" width="50px"></div>
+    <div class="deezer"><img class="logodeezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
+</footer>
 </div>
 </body>
 </html>
