--- a/html/detail.html
+++ b/html/detail.html
@@ -6,6 +6,7 @@
     <title>Slakun</title>
     <link rel="stylesheet" href="../css/detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
     <a name="arriba"></a>
