--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <title>Slakun</title>
     <link rel="stylesheet" href="../css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="total">
@@ -23,7 +24,7 @@
 <div class="carrusel">Acá iría el carrusel</div>
 <div class="triple">
     <div class="tracks" >
-        <div class="tracksarriba">Tracks</a> </div>
+        <div class="semititulos">Tracks</a> </div>
         <div class="abajo">
             <div class="trackblock">
                 <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
@@ -42,7 +43,7 @@
         </div>
     </div>
     <Div class="albums">
-        <div class="arribaalbum">Albums</a> </div>
+        <div class="semititulos">Albums</a> </div>
         <div class="abajo2"> 
             <div class="albumblock">
                 <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
@@ -61,7 +62,7 @@
            
     </Div>
     <div class="artist">
-        <div class="ArtistArriba">Artist</div>
+        <div class="semititulos">Artist</div>
         <div class="abajo3">
            <a href="detail.html"> 
                <div class="artistblock">
