--- a/html/playlist.html
+++ b/html/playlist.html
@@ -16,11 +16,41 @@
         <div><a href="generos.html">Genres</a> </div>
         <Div><a href="playlist.html">Playlist</a></Div>
     </header>
-    <div class="Canciones"><h1>Canciones</h1>
-        <div class="cancion1" >Cancion 1</div>
-        <div class="cancion2" >Cancion 2</div>
-        <div class="cancion3">Cancion 3</div>
+<div class="containers">
+    <div class="Canciones"><h1>Playlist 1</h1>
+        <div class="cancion1" >
+            <h2>Cancion 1</h2>
+        </div>
+        <div class="cancion2" >
+            <h2>Cancion 2</h2>
+        </div>
+        <div class="cancion3">
+            <h2>Cancion 3</h2>
+        </div>
     </div>
+    <div class="Canciones"><h1>Playlist 2</h1>
+        <div class="cancion1" >
+            <h2>Cancion 1</h2>
+        </div>
+        <div class="cancion2" >
+            <h2>Cancion 2</h2>
+        </div>
+        <div class="cancion3">
+            <h2>Cancion 3</h2>
+        </div>
+    </div>
+    <div class="Canciones"><h1>Playlist 3</h1>
+        <div class="cancion1" >
+            <h2>Cancion 1</h2>
+        </div>
+        <div class="cancion2" >
+            <h2>Cancion 2</h2>
+        </div>
+        <div class="cancion3">
+            <h2>Cancion 3</h2>
+        </div>
+    </div>
+</div>     
     <a class="arriba" href="#arriba">Go Top</a>
     <div class = "footer">
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
