--- a/html/detail.html
+++ b/html/detail.html
@@ -9,12 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a name="arriba"></a>
+    <div class="total">
+        <a class="arriba" name="arriba"></a>
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt="logo"></a></div>
-        <div><a href="index.html">Home</a> </div>
-        <div><a href="generos.html">Genres</a> </div>
-        <Div><a href="playlist.html">Playlist</a></Div>
+        <div class="titulos"><a href="index.html">Home</a> </div>
+        <div class="titulos"><a href="generos.html">Genres</a> </div>
+        <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
     
     <div class="contenido">
@@ -47,6 +48,6 @@
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
         <div class="deezer"><img src="../img/deezer.png" alt="deezer" width="50px"></div>
     </div>
-    
+</div>
 </body>
 </html>
