--- a/html/playlist.html
+++ b/html/playlist.html
@@ -12,9 +12,9 @@
     <a name="arriba"></a>
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt="logo"></a></div>
-        <div><a href="index.html">Home</a> </div>
-        <div><a href="generos.html">Genres</a> </div>
-        <Div><a href="playlist.html">Playlist</a></Div>
+        <div class="titulos"><a href="index.html">Home</a> </div>
+        <div class="titulos"><a href="generos.html">Genres</a> </div>
+        <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
 <div class="containers">
     <div class="Canciones"><h1>Playlist 1</h1>
