--- a/html/generos.html
+++ b/html/generos.html
@@ -13,9 +13,9 @@
     <a name="arriba"></a>
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt="logo"></a></div>
-        <div><a href="index.html">Home</a> </div>
-        <div><a href="generos.html">Genres</a> </div>
-        <Div><a href="playlist.html">Playlist</a></Div>
+        <div class="titulos"><a href="index.html">Home</a> </div>
+        <div class="titulos"><a href="generos.html">Genres</a> </div>
+        <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
     <h1>GENEROS</h1>
     <div class="todo">
