--- a/html/index.html
+++ b/html/index.html
@@ -27,17 +27,17 @@
         <div class="semititulos">Tracks</a> </div>
         <div class="abajo">
             <div class="trackblock">
-                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
-                <p>THE SCOTTS | Travis Scott ft. Kid Cudi </p>
+                <img class=portadaAlbum src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
+                <p class="nombrecancion">THE SCOTTS | Travis Scott ft. Kid Cudi </p>
 
             </div>
             <div class="trackblock" >
-                <img class="fotomusica" src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
-                <p>THE SCOTTS | Travis Scott ft. Kid Cudi</p>
+                <img class="portadaAlbum" src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
+                <p class="nombrecancion">THE SCOTTS | Travis Scott ft. Kid Cudi</p>
             </div>
             <div class="trackblock">
-                <img src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
-                <p>THE SCOTTS | Travis Scott ft. Kid Cudi
+                <img class="portadaAlbum" src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
+                <p class="nombrecancion">THE SCOTTS | Travis Scott ft. Kid Cudi
                 </p>
             </div>
         </div>
@@ -46,17 +46,17 @@
         <div class="semititulos">Albums</a> </div>
         <div class="abajo2"> 
             <div class="albumblock">
-                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
-                <p>The Getaway | Red Hot Chilli Peppers </p>
+                <img class="portadaAlbum" src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
+                <p class="nombrecancion">The Getaway | Red Hot Chilli Peppers </p>
 
             </div>
             <div class="albumblock" >
-                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
-                <p>The Getaway | Red Hot Chilli Peppers </p>
+                <img class="portadaAlbum" src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
+                <p class="nombrecancion">The Getaway | Red Hot Chilli Peppers </p>
             </div>
             <div class="albumblock">
-                <img src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
-                <p>The Getaway | Red Hot Chilli Peppers </p>
+                <img class="portadaAlbum" src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
+                <p class="nombrecancion">The Getaway | Red Hot Chilli Peppers </p>
         </div>
         </div>
            
@@ -66,18 +66,18 @@
         <div class="abajo3">
            <a href="detail.html"> 
                <div class="artistblock">
-            <img src="../img/spinetta.jpg" height="100px" alt="spinetta">
-            <p>Luis Alberto Spinetta </p>
+            <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
+            <p class="nombrecancion">Luis Alberto Spinetta </p>
         </div></a>
         <a href="detail.html"> 
-            <div class="artistblock">
-         <img src="../img/spinetta.jpg" height="100px" alt="spinetta">
-         <p>Luis Alberto Spinetta </p>
+            <div class="artistblock" class="artistblock">
+         <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
+         <p class="nombrecancion">Luis Alberto Spinetta </p>
      </div></a>
      <a href="detail.html"> 
         <div class="artistblock">
-     <img src="../img/spinetta.jpg" height="100px" alt="spinetta">
-     <p>Luis Alberto Spinetta </p>
+     <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
+     <p class="nombrecancion">Luis Alberto Spinetta </p>
  </div></a>
         </div>
     </div>
