--- a/html/generos.html
+++ b/html/generos.html
@@ -20,24 +20,24 @@
     <h1>GENEROS</h1>
     <div class="todo">
          <div class="fila">
-            <img src="../img/rock.jpg" alt="rock" height="140vh">
-            <img src="../img/pop.jpg" alt="pop" height="140vh">
-            <img src="../img/rock.jpg" alt="rock" height="140vh">
-            <img src="../img/pop.jpg" alt="pop" height="140vh">
-            <img src="../img/rock.jpg" alt="rock" height="140vh">
-            <img src="../img/pop.jpg" alt="pop" height="140vh"></div>
+            <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
+            <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
+            <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
+            <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
+            <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
+            <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh"></div>
         <div class="fila">
-                <img src="../img/rock.jpg" alt="rock" height="140vh">
-                <img src="../img/pop.jpg" alt="pop" height="140vh">
-                <img src="../img/rock.jpg" alt="rock" height="140vh">
-                <img src="../img/pop.jpg" alt="pop" height="140vh">
-                <img src="../img/rock.jpg" alt="rock" height="140vh">
-                <img src="../img/pop.jpg" alt="pop" height="140vh"></div>
+                <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
+                <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
+                <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
+                <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
+                <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
+                <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh"></div>
     </div>
     <a class="arriba" href="#arriba">Go Top</a>
-    <div class = "footer">
+    <footer>
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
-        <div class="deezer"><img src="../img/deezer.png" alt="deezer" width="50px"></div>
-    </div>
+        <div class="deezer"><img class="logodeezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
+    </footer>
 </body>
 </html>
