--- a/html/generos.html
+++ b/html/generos.html
@@ -12,7 +12,7 @@
 <body>
     <a name="arriba"></a>
     <header>
-        <div class="logo"><a href="index.html"><img src="../img/logo.png" width="40px"alt="logo"></a></div>
+        <div class="logo"><a href="index.html"><img src="../img/logo2.png" width="100px"alt="logo"></a></div>
         <div class="titulos"><a href="index.html">Home</a> </div>
         <div class="titulos"><a href="generos.html">Genres</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
