--- a/html/index.html
+++ b/html/index.html
@@ -17,10 +17,15 @@
         <div class="titulos"><a href="generos.html">Genres</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
-<div class="intermedio">
+    <div class="intermedio">
     <div class="premio">¿Sabías que pasaste 30.000 minutos escuchando música en abril, y que tu artista favorito fue Paulo Londra? </div>
-    <div class="buscador">Acá va el buscador</div>
-</div>
+    <div class="buscador">
+        <form action="resulados.html" method="GET" >
+            <input type="text" name="search">
+            <button type="sumbit">Buscar</button>
+        </form>
+    </div>
+    </div>
 <div class="carrusel">Acá iría el carrusel</div>
 <div class="triple">
     <div class="tracks" >
@@ -64,7 +69,6 @@
     <div class="artist">
         <div class="semititulos">Artist</div>
         <div class="abajo3">
-           <a href="detail.html"> 
                <div class="artistblock">
             <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
             <p class="nombrecancion">Luis Alberto Spinetta </p>
