--- a/html/generos.html
+++ b/html/generos.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <div class="total"></div>
     <a name="arriba"></a>
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo2.png" width="100px"alt="logo"></a></div>
@@ -17,15 +18,15 @@
         <div class="titulos"><a href="generos.html">Genres</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
-    <h1>GENEROS</h1>
-    <div class="todo">
+    <h1>GÉNEROS</h1>
+    <div class="generos">
          <div class="fila">
             <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
             <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
-            <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
-            <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
-            <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
-            <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh"></div>
+            <img class="portadagenero" src="../img/jazz.jpg" alt="rock" height="140vh">
+            <img class="portadagenero" src="../img/folk.jpg" alt="pop" height="140vh">
+            <img class="portadagenero" src="../img/metal.jpg" alt="rock" height="140vh">
+            <img class="portadagenero" src="../img/rap.jpg" alt="pop" height="140vh"></div>
         <div class="fila">
                 <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
                 <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
@@ -39,5 +40,6 @@
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
         <div class="deezer"><img class="logodeezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
     </footer>
+    </div>
 </body>
 </html>
