--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <div class="total">
-    <a class="arriba" name="arriba"></a>
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo2.png" width="100px"alt="logo"></a></div>
         <div class="titulos"><a href="index.html">Home</a> </div>
@@ -19,12 +18,10 @@
     </header>
     <div class="intermedio">
     <div class="premio">¿Sabías que pasaste 30.000 minutos escuchando música en abril, y que tu artista favorito fue Paulo Londra? </div>
-    <div class="buscador">
-        <form action="resulados.html" method="GET" >
-            <input type="text" name="search">
+    <form class="buscador" action="resulados.html" method="GET" >
+            <input type="text" name="search" placeholder="Buscar">
             <button type="sumbit">Buscar</button>
-        </form>
-    </div>
+    </form>
     </div>
 <div class="carrusel">Acá iría el carrusel</div>
 <div class="triple">
@@ -42,8 +39,11 @@
             </div>
             <div class="trackblock">
                 <img class="portadaAlbum" src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
-                <p class="nombrecancion">THE SCOTTS | Travis Scott ft. Kid Cudi
-                </p>
+                <p class="nombrecancion">THE SCOTTS | Travis Scott ft. Kid Cudi</p>
+            </div>
+            <div class="trackblock">
+                <img class="portadaAlbum" src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
+                <p class="nombrecancion">THE SCOTTS | Travis Scott ft. Kid Cudi</p>
             </div>
         </div>
     </div>
@@ -53,7 +53,6 @@
             <div class="albumblock">
                 <img class="portadaAlbum" src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
                 <p class="nombrecancion">The Getaway | Red Hot Chilli Peppers </p>
-
             </div>
             <div class="albumblock" >
                 <img class="portadaAlbum" src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
@@ -62,31 +61,45 @@
             <div class="albumblock">
                 <img class="portadaAlbum" src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
                 <p class="nombrecancion">The Getaway | Red Hot Chilli Peppers </p>
-        </div>
+            </div>
+            <div class="albumblock">
+                <img class="portadaAlbum" src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
+                <p class="nombrecancion">The Getaway | Red Hot Chilli Peppers </p>
+            </div>
         </div>
            
     </Div>
     <div class="artist">
         <div class="semititulos">Artist</div>
         <div class="abajo3">
-               <div class="artistblock">
+        <a href="detail.html">
+            <div class="artistblock">
+            <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
+            <p class="nombrecancion">Luis Alberto Spinetta </p>
+        </div></a>
+        <a href="detail.html">
+            <div class="artistblock">
             <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
             <p class="nombrecancion">Luis Alberto Spinetta </p>
         </div></a>
         <a href="detail.html"> 
-            <div class="artistblock" class="artistblock">
-         <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
-         <p class="nombrecancion">Luis Alberto Spinetta </p>
-     </div></a>
-     <a href="detail.html"> 
-        <div class="artistblock">
-     <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
-     <p class="nombrecancion">Luis Alberto Spinetta </p>
- </div></a>
+            <div class="artistblock">
+            <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
+            <p class="nombrecancion">Luis Alberto Spinetta </p>
+        </div></a>
+        <a href="detail.html"> 
+            <div class="artistblock">
+            <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
+            <p class="nombrecancion">Luis Alberto Spinetta </p>
+        </div></a>
+        <a href="detail.html"> 
+                <div class="artistblock">
+                <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
+                <p class="nombrecancion">Luis Alberto Spinetta </p>
+        </div></a>
         </div>
     </div>
 </div>
-<a class="arriba" href="#arriba">Go Top</a>
 <footer>
     <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
     <div class="deezer"><img class="logodeezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
