--- a/html/generos.html
+++ b/html/generos.html
@@ -10,10 +10,9 @@
 
 </head>
 <body>
-    <div class="total"></div>
-    <a name="arriba"></a>
+    <div class="total">
     <header>
-        <div class="logo"><a href="index.html"><img src="../img/logo2.png" width="100px"alt="logo"></a></div>
+        <div class="logo"><a href="index.html"><img src="../img/logo2.png" width="100px" alt="logo"></a></div>
         <div class="titulos"><a href="index.html">Home</a> </div>
         <div class="titulos"><a href="generos.html">Genres</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
@@ -23,19 +22,18 @@
          <div class="fila">
             <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
             <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
-            <img class="portadagenero" src="../img/jazz.jpg" alt="rock" height="140vh">
-            <img class="portadagenero" src="../img/folk.jpg" alt="pop" height="140vh">
-            <img class="portadagenero" src="../img/metal.jpg" alt="rock" height="140vh">
-            <img class="portadagenero" src="../img/rap.jpg" alt="pop" height="140vh"></div>
+            <img class="portadagenero" src="../img/jazz.jpg" alt="jazz" height="140vh">
+            <img class="portadagenero" src="../img/folk.jpg" alt="folk" height="140vh">
+            <img class="portadagenero" src="../img/metal.jpg" alt="metal" height="140vh">
+            <img class="portadagenero" src="../img/rap.jpg" alt="rap" height="140vh"></div>
         <div class="fila">
                 <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
                 <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
-                <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
-                <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
-                <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
-                <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh"></div>
+                <img class="portadagenero" src="../img/jazz.jpg" alt="jazz" height="140vh">
+                <img class="portadagenero" src="../img/folk.jpg" alt="folk" height="140vh">
+                <img class="portadagenero" src="../img/metal.jpg" alt="metal" height="140vh">
+                <img class="portadagenero" src="../img/rap.jpg" alt="rap" height="140vh"></div>
     </div>
-    <a class="arriba" href="#arriba">Go Top</a>
     <footer>
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
         <div class="deezer"><img class="logodeezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
