--- a/html/playlist.html
+++ b/html/playlist.html
@@ -9,52 +9,52 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a name="arriba"></a>
+    <div class="total">
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo2.png" width="100px"alt="logo"></a></div>
         <div class="titulos"><a href="index.html">Home</a> </div>
         <div class="titulos"><a href="generos.html">Genres</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
-<div class="containers">
-    <div class="Canciones"><h1>Playlist 1</h1>
-        <div class="cancion1" >
-            <h2>Cancion 1</h2>
+    <section class="container">
+        <div class="Canciones"><h2>Playlist 1</h2>
+            <div class="cancion1" >
+                <h3>Cancion 1</h3>
+            </div>
+            <div class="cancion2" >
+                <h3>Cancion 2</h3>
+            </div>
+            <div class="cancion3">
+                <h3>Cancion 3</h3>
+            </div>
         </div>
-        <div class="cancion2" >
-            <h2>Cancion 2</h2>
+        <div class="Canciones"><h2>Playlist 2</h2>
+            <div class="cancion1" >
+                <h3>Cancion 1</h3>
+            </div>
+            <div class="cancion2" >
+                <h3>Cancion 2</h3>
+            </div>
+            <div class="cancion3">
+                <h3>Cancion 3</h3>
+            </div>
         </div>
-        <div class="cancion3">
-            <h2>Cancion 3</h2>
+        <div class="Canciones"><h2>Playlist 3</h2>
+            <div class="cancion1" >
+                <h3>Cancion 1</h3>
+            </div>
+            <div class="cancion2" >
+                <h3>Cancion 2</h3>
+            </div>
+            <div class="cancion3">
+                <h3>Cancion 3</h3>
+            </div>
         </div>
-    </div>
-    <div class="Canciones"><h1>Playlist 2</h1>
-        <div class="cancion1" >
-            <h2>Cancion 1</h2>
-        </div>
-        <div class="cancion2" >
-            <h2>Cancion 2</h2>
-        </div>
-        <div class="cancion3">
-            <h2>Cancion 3</h2>
-        </div>
-    </div>
-    <div class="Canciones"><h1>Playlist 3</h1>
-        <div class="cancion1" >
-            <h2>Cancion 1</h2>
-        </div>
-        <div class="cancion2" >
-            <h2>Cancion 2</h2>
-        </div>
-        <div class="cancion3">
-            <h2>Cancion 3</h2>
-        </div>
-    </div>
-</div>     
-    <a class="arriba" href="#arriba">Go Top</a>
+    </section>
     <div class = "footer">
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
         <div class="deezer"><img src="../img/deezer.png" alt="deezer" width="50px"></div>
     </div>
+</div>
 </body>
 </html>
