--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="total">
     <header>
-        <div class="logo"><a href="index.html"><img src="../img/logo2.png" width="100px"alt="logo"></a></div>
+        <a href="index.html"><img class="logo" src="../img/logo2.png" alt="logo"></a>
         <div class="titulos"><a href="index.html">Home</a> </div>
         <div class="titulos"><a href="generos.html">Genres</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
@@ -102,7 +102,7 @@
 </div>
 <footer>
     <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
-    <div class="deezer"><img class="logodeezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
+    <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
 </footer>
 </div>
 </body>
