--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
             <div class="trackblock">
                 <img class=portadaAlbum src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
                 <p class="nombrecancion">THE SCOTTS | Travis Scott ft. Kid Cudi </p>
-
+               
             </div>
             <div class="trackblock" >
                 <img class="portadaAlbum" src="../img/the-scotts-portada_1.jpg" height="100PX" alt="travis">
@@ -51,49 +51,49 @@
     <Div class="albums">
         <div class="semititulos">Albums</a> </div>
         <div class="abajo2"> 
-            <div class="albumblock">
+            <a href="detailalbum.html"><div class="albumblock">
                 <img class="portadaAlbum" src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
                 <p class="nombrecancion">The Getaway | Red Hot Chilli Peppers </p>
-            </div>
-            <div class="albumblock" >
+            </div></a>
+            <a href="detailalbum.html"><div class="albumblock">
                 <img class="portadaAlbum" src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
                 <p class="nombrecancion">The Getaway | Red Hot Chilli Peppers </p>
-            </div>
-            <div class="albumblock">
+            </div></a>
+            <a href="detailalbum.html"><div class="albumblock">
                 <img class="portadaAlbum" src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
                 <p class="nombrecancion">The Getaway | Red Hot Chilli Peppers </p>
-            </div>
-            <div class="albumblock">
+            </div></a>
+            <a href="detailalbum.html"><div class="albumblock">
                 <img class="portadaAlbum" src="../img/red-hot-chili-peppers-the-getaway-1-1068x1068.jpg" height="100px" alt="rhchp">
                 <p class="nombrecancion">The Getaway | Red Hot Chilli Peppers </p>
-            </div>
+            </div></a>
         </div>
            
     </Div>
     <div class="artist">
         <div class="semititulos">Artist</div>
         <div class="abajo3">
-        <a href="detail.html">
+        <a href="detailartist.html">
             <div class="artistblock">
             <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
             <p class="nombrecancion">Luis Alberto Spinetta </p>
         </div></a>
-        <a href="detail.html">
+        <a href="detailartist.html">
             <div class="artistblock">
             <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
             <p class="nombrecancion">Luis Alberto Spinetta </p>
         </div></a>
-        <a href="detail.html"> 
+        <a href="detailartist.html"> 
             <div class="artistblock">
             <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
             <p class="nombrecancion">Luis Alberto Spinetta </p>
         </div></a>
-        <a href="detail.html"> 
+        <a href="detailartist.html"> 
             <div class="artistblock">
             <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
             <p class="nombrecancion">Luis Alberto Spinetta </p>
         </div></a>
-        <a href="detail.html"> 
+        <a href="detailartist.html"> 
                 <div class="artistblock">
                 <img class="portadaAlbum" src="../img/spinetta.jpg" height="100px" alt="spinetta">
                 <p class="nombrecancion">Luis Alberto Spinetta </p>
@@ -106,5 +106,6 @@
     <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
 </footer>
 </div>
+<script src="../js/index.js"></script>
 </body>
 </html>
