--- a/html/detailalbum.html
+++ b/html/detailalbum.html
@@ -27,7 +27,7 @@
             <ul class="listado">
                 <li class="cancion">
                     <p class="nombre">Canción 1</p>
-                    <audio controls src="../audio/spinetta.mp3.mp3"></audio>
+                    <audio controls src="../audio/spinetta.mp3"></audio>
                 </li>
                 <li class="cancion">
                     <p class="nombre">Canción 2</p>
@@ -59,6 +59,10 @@
             <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
             <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
         </footer>
+   
     </div>
+    <div class="sonar">
+    </div>
+    <script src="../js/detailalbum.js"></script>
 </body>
 </html>
