--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,32 @@
             <button type="sumbit">Buscar</button>
     </form>
     </div>
-<div class="carrusel">Acá iría el carrusel</div>
+    <div class="Carrusel">
+        <div class="FotosCarrusel fade">
+            <img src="../img/Beatles.jpg" style="width:100%">
+            <div class="texto">The Beatles</div>
+        </div>
+        <div class="FotosCarrusel fade">
+            <img src="../img/RS.jpg" style="width:100%">
+            <div class="texto">Rolling Stones</div>
+          </div>
+          <div class="FotosCarrusel fade">
+            <img src="../img/GnR.jpg" style="width:100%">
+            <div class="texto">Guns n Roses</div>
+          </div>
+          <div class="FotosCarrusel fade">
+              <img src="../img/Kiss.jpg" alt="">
+              <div class="texto">Kiss</div>
+          </div>
+          <a class="antes" onclick="plusSlides(-1)">&#10096;</a>
+          <a class="despues" onclick="plusSlides(1)">&#10097;</a>
+    </div>
+    <div style="text-align:center">
+        <span class="punto" onclick="currentSlide(1)"></span>
+        <span class="punto" onclick="currentSlide(2)"></span>
+        <span class="punto" onclick="currentSlide(3)"></span>
+        <span class="punto" onclick="currentSlide(4)"></span>
+      </div>
 <div class="triple">
     <div class="tracks" >
         <div class="semititulos">Tracks</a> </div>
@@ -105,6 +130,7 @@
     <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
     <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
 </footer>
+<script src="../js/index.js"></script>
 </div>
 </body>
 </html>
