--- a/html/detailalbum.html
+++ b/html/detailalbum.html
@@ -26,32 +26,32 @@
             </div>
             <ul class="listado">
                 <li class="cancion">
+                    <img class="boton-play" src="../img/play.png" alt="">
                     <p class="nombre">Canción 1</p>
-                    <audio controls src="../audio/spinetta.mp3"></audio>
                 </li>
                 <li class="cancion">
+                    <img class="boton-play" src="../img/play.png" alt="">
                     <p class="nombre">Canción 2</p>
-                    <audio controls src=""></audio>
                 </li>
                 <li class="cancion">
+                    <img class="boton-play" src="../img/play.png" alt="">
                     <p class="nombre">Canción 3</p>
-                    <audio controls src=""></audio>
                 </li>
                 <li class="cancion">
+                    <img class="boton-play" src="../img/play.png" alt="">
                     <p class="nombre">Canción 4</p>
-                    <audio controls src=""></audio>
                 </li>
                 <li class="cancion">
+                    <img class="boton-play" src="../img/play.png" alt="">
                     <p class="nombre">Canción 5</p>
-                    <audio controls src=""></audio>
                 </li>
                 <li class="cancion">
+                    <img class="boton-play" src="../img/play.png" alt="">
                     <p class="nombre">Canción 6</p>
-                    <audio controls src=""></audio>
                 </li>
                 <li class="cancion">
+                    <img class="boton-play" src="../img/play.png" alt="">
                     <p class="nombre">Canción 7</p>
-                    <audio controls src=""></audio>
                 </li>
             </ul>
         </section>
@@ -62,6 +62,21 @@
    
     </div>
     <div class="sonar">
+        <div class="infoTema">
+            <div class="nombreTema">Spinetta</div>
+            <div class="nombreArista">Spinetta</div>
+        </div>
+        <div class="reproduccion">
+            <div class="botones">
+                <img  id="pre" src="../img/pre.png" alt="">
+                <img id="play" src="../img/play.png" alt="">
+                <img id="next" src="../img/next.png" alt="">
+            </div>
+            <div class="seekbar">
+                <div id="fill" ></div>
+                <div id="handle" ></div>
+            </div>
+        </div>
     </div>
     <script src="../js/detailalbum.js"></script>
 </body>
