--- a/html/generos.html
+++ b/html/generos.html
@@ -18,27 +18,39 @@
         <div class="titulos"><a href="generos.html">Genres</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
+
     <h1>GÉNEROS</h1>
     <div class="generos">
-         <div class="fila">
-            <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
-            <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
-            <img class="portadagenero" src="../img/jazz.jpg" alt="jazz" height="140vh">
-            <img class="portadagenero" src="../img/folk.jpg" alt="folk" height="140vh">
-            <img class="portadagenero" src="../img/metal.jpg" alt="metal" height="140vh">
-            <img class="portadagenero" src="../img/rap.jpg" alt="rap" height="140vh"></div>
-        <div class="fila">
-                <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh">
-                <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh">
-                <img class="portadagenero" src="../img/jazz.jpg" alt="jazz" height="140vh">
-                <img class="portadagenero" src="../img/folk.jpg" alt="folk" height="140vh">
-                <img class="portadagenero" src="../img/metal.jpg" alt="metal" height="140vh">
-                <img class="portadagenero" src="../img/rap.jpg" alt="rap" height="140vh"></div>
+         
+            <div class="cajas">
+                <h2>Rock</h2>
+                <img class="portadagenero" src="../img/rock.jpg" alt="rock" height="300vh">
+            </div>
+            <div class="cajas">
+                <h2>Pop</h2>
+                <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="300vh">               
+            </div>
+            <div class="cajas">
+                <h2>Jazz</h2>
+                <img class="portadagenero" src="../img/jazz.jpg" alt="jazz" height="300vh">               
+            </div>
+            <div class="cajas">
+                <h2>Folklore</h2>
+                <img class="portadagenero" src="../img/folk.jpg" alt="folk" height="300vh">               
+            </div>
+            <div class="cajas">
+                <h2>Metal</h2>
+                <img class="portadagenero" src="../img/metal.jpg" alt="metal" height="300vh">               
+            </div>
+            <div class="cajas">
+                <h2>Rap</h2>
+                <img class="portadagenero" src="../img/rap.jpg" alt="rap" height="300vh"></div>           
+            </div>
     </div>
     <footer>
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
         <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
     </footer>
-    </div>
+     
 </body>
 </html>
